Tested transaction. Add header validation middleware. Add custom validatior for amount.
