# docs/swagger.json
@@ -67,6 +67,13 @@
                 "summary": "Updates user balance",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Source type of the request",
+                        "name": "Source-type",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Data for transaction",
                         "name": "body",
                         "in": "body",
